Add function-wrapped parsing for method body statements
Wrap template code in a function to parse and generate output for statements
like `this.x = y;` that don't parse as a module or class body. This enables
handling of method body statements in templates.

--- a/external_tester/Cargo.toml
+++ b/external_tester/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 macroforge_ts_quote = { path = ".." }
-macroforge_ts = "0.1.61"
+macroforge_ts = { path = "../../macroforge_ts" }
 proc-macro2 = "1"
 swc_core = { version = "51.0.0", default-features = false, features = [
   "common",
