Add new compiler with lexer, parser, semantic analysis, IR, and codegen
- Introduce a full compiler infrastructure for the template language:
  - Lexer: tokenizes template input with modes for control blocks, directives,
    interpolations, ident blocks, strings, templates
  - Parser: builds a Rowan-based CST with support for control flow, directives,
    and interpolation nodes
  - Semantic analysis: classifies placeholders as expression, type, identifier,
    or statement based on syntax context
  - Intermediate Representation (IR): flattened nodes for code generation
  - Codegen: generates Rust TokenStreams producing TypeScript output at runtime
    using proc-macro2 and quote
  - Integration: bridges segment-based templates to new compiler, provides
    functions to compile segments to SWC AST or string mode
- Remove legacy template building, classification, compilation, and flushing
  modules in favor of new compiler approach
- Update Cargo.toml and dependencies to include new crates like `rowan` and
  `countme`
- Provide tests ensuring lexing, parsing, placeholder classification, IR
  lowering, and codegen correctness
- Enable runtime SWC parsing of generated TypeScript strings for maximal output
  fidelity and extension

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ proc-macro2 = "1.0.95"
 quote = "1.0.40"
 syn = { version = "2.0.104", features = ["full"] }
 convert_case = "0.6"
+rowan = "0.15"
 swc_core = { version = "51.0.0", default-features = false, features = [
   "common",
   "ecma_ast",
