Add context-aware template scanning and debug logging for codegen
- Implement ContextStack and ContextSpan to track nested parse contexts
- Split templates into context spans based on brace balance and parse context
- Add debug logging of template transformations to logs/ when MF_DEBUG_CODEGEN
  enabled
- Update ts_template_impl to handle injected streams during template parsing

--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -3,6 +3,10 @@ name = "compile_time_parser_external_tester"
 version = "0.1.0"
 edition = "2024"
 
+[[bin]]
+name = "expand_closure"
+path = "expand_closure.rs"
+
 [dependencies]
 macroforge_ts_quote = { path = ".." }
 macroforge_ts_syn = { path = "../../macroforge_ts_syn" }
