Add comprehensive error handling and control flow tokens to parser and lexer
- Introduce detailed, context-rich error types for codegen and lexer
- Convert many codegen functions to return Result for explicit error propagation
- Add new SyntaxKind tokens representing combined control flow blocks:
  BraceHashIf, BraceHashFor, BraceHashWhile, BraceHashMatch, BraceSlashIf,
  BraceSlashFor, BraceSlashWhile, BraceSlashMatch, BraceColonElse,
  BraceColonElseIf, BraceColonCase
- Update lexer to emit these combined tokens instead of separate parts
- Update parser to dispatch control block parsing based on these new tokens
- Add context-aware expression termination logic for template control flow
- Refactor parser context for expression terminators and placeholder kinds
- Add tests verifying lexer token emission and normalization of control blocks
- Update existing parsing helpers to handle new error types and context-based
  placeholders

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ convert_case = "0.10.0"
 rowan = "0.16.1"
 anyhow = "1.0"
 rustc-hash = "2.1.1"
+smallvec = "1.13"
 swc_macros_common = "1.0"
 swc_core = { version = "52.0.0", default-features = false, features = [
   "common",
